log/build_2024-05-16_17-40-23/blackjack/stderr.log
  File "/home/mustache/ros2_ws/install/blackjack/lib/python3.10/site-packages/blackjack/motor_control.py", line 62
    global gesture_last = ""
                        ^
SyntaxError: invalid syntax

